data/all_generated_tests/raw_wast_tests/br_EdgeCaseFailuresinbr_table_1157.wast
;; 8. **Test Description**: A loop containing a `br_table` where the index varies based on dynamic calculations, potentially leading to out-of-range indices during certain iterations.    - **Constraint Checked**: Correct handling of dynamically changing indices during loop execution.    - **Edge Case Relation**: Exposes differential behavior when indices within loops are calculated on-the-fly and occasionally out of bounds.

(assert_invalid
  (module 
    (func $dynamic-index-br_table
      (loop (block (block (block
        (br_table 0 1 2 (i32.rem_u (i32.const 10) (i32.const 0)))
      ))))
    )
  )
  "unknown label"
)